--- a/scss/style.scss
+++ b/scss/style.scss
@@ -183,6 +183,10 @@ button {
 
 // END OF FORM INPUTS AND BUTTONS ======================================
 
+.d-none {
+  display: none;
+}
+
 .container {
   width: 100%;
   // max-width: 1440px;
