--- a/css/style.css
+++ b/css/style.css
@@ -429,6 +429,9 @@ button {
   visibility: hidden;
   opacity: 0; }
 
+.d-none {
+  display: none; }
+
 .container {
   width: 100%;
   margin: 0 auto; }
